Updated summaries for many of the sections.

--- a/projects.html
+++ b/projects.html
@@ -56,7 +56,7 @@
             <td></td>
             <td>A food-fighting game where tomatoes are thrown, and where playing with food takes on a whole new meaning. <br>Developed/written in Python, using the Pygame library.
             <br><br>
-<a href="newIndex.html" id="download-button" class="btn-large waves-effect waves-light grey">View FoodRun Page</a></td>
+<a href="projectPages/foodrun" id="download-button" class="btn-large waves-effect waves-light grey">View FoodRun Page</a></td>
           </tr>
           <tr>
             <td><h5>"On with the Show!" - 2013</h5><img class="responsive-img" src="images/onwiththeshow.png"></td>
