--- a/projectsOther.html
+++ b/projectsOther.html
@@ -47,15 +47,27 @@
             <tr>
             <td><h5>HackUCI - 2014</h5><img class="responsive-img" src="images/hackLogo.jpg"></td>
             <td></td>
-            <td>A sample description that tells me something about the project that hopefully will not exceed two lines!<br>A sample description that tells me something about the project that hopefully will not exceed two lines!
-            <br><br>
+            <td>I was part of a team of CS students who organized UCI's first hackathon. <br>
+            The event was held May 22-25, reaching ~300 people. <br>
+            The HackUCI team was able to raise ~40k in funds for the event. <br>
+            HackUCI was sponsored by companies such as Cylance, General Assembly, and Lob. <br>
+
+            HackUCI is currently making a comeback and planning is in the works! 
+            <br>
+
+<br>
+            <a href="http://hackuci.com/"/ id="download-button" class="btn-large waves-effect waves-light blue">Check out HackUCI</a>
+
+
           </tr>
 
           <tr>
           <td><h5>ReadyForce - 2014</h5><img class="responsive-img" src="images/readyforce.jpg"></td>
           <td></td>
-          <td>A sample description that tells me something about the project that hopefully will not exceed two lines!
-          <br>A sample description that tells me something about the project that hopefully will not exceed two lines! <br><br>
+          <td>I worked for ReadyForce (acquired by InternMatch) Fall 2014 as their campus ambassador. <br>
+          I introduced the professional networking platform to UCI students through Facebook and email. <br>
+          I wrote and executed marketing plans, and worked in a team of 3 during UCI's career fair. <br>
+
           </td>
           <td></td>
            </tr>
@@ -64,10 +76,8 @@
           <tr>
           <td><h5>Code:Roosevelt - 2014</h5><img class="responsive-img" src="images/jason2.jpg"></td>
           <td></td>
-          <td>A sample description that tells me something about the project that hopefully will not exceed two lines!
-          <br>A sample description that tells me something about the project that hopefully will not exceed two lines! <br><br>
-<a href="projectPages/blood.html" id="download-button" class="btn-large waves-effect waves-light red">Learn more about Hacker:Fund.</a>
-
+          <td>I volunteered at Code:Roosevelt - a hackathon for students at Eleanor Roosevelt High School which went on for 24 hours. <br>
+          I taught basic HTML/CSS, showed kids how to play with Arduinos, and gave people a crash course in Unity3D. <br>  
 
           </td>
           <td></td>
