--- a/clubsOrgs.html
+++ b/clubsOrgs.html
@@ -41,8 +41,17 @@
           <tr>
           <td><h5>Video Game Development Club @ UCI</h5><img class="responsive-img" src="images/vgdc.jpg"></td>
           <td></td>
-          <td>A sample description that tells me something about the project that hopefully will not exceed two lines!
-          <br>A sample description that tells me something about the project that hopefully will not exceed two lines! History. <br><br>
+          <td> I'm currently the Vice President of VGDC @ UCI. <br>
+          I'm in charge of logistics/event planning, faculty communication and industry outreach. <br>
+          I'm also in charge of sending out weekly emails. <br>
+
+          I've been a member of this club since my freshman year, and I have deeply involved with this club since. 
+          <br>
+          I partipate in game jams, attend workshops and speaker events, and became an officer of the club my second year.
+
+
+
+           <br><br>
 <a href="http://vgdc-uci.com/" id="download-button" class="btn-large waves-effect waves-light blue">VISIT VGDC @ VGDC-UCI.COM</a>
 
 
@@ -52,7 +61,13 @@
           <tr>
             <td><h5>Taiwanese American Org. @ UCI</h5><img class="responsive-img" src="images/taouci.png"></td>
             <td></td>
-            <td>A sample description that tells me something about the project that hopefully will not exceed two lines!<br>A sample description that tells me something about the project that hopefully will not exceed two lines!
+            <td>I'm currently the Webmaster of TAO @ UCI. <br>
+          I'm in charge of maintaining the club website and event/logistics planning.<br>
+
+          I've been a member of this club since my sophomore year, serving as a staff member and helping out with events. 
+          <br>
+           I've met many different individuals from my culture through this club! <br>
+             I've aim to pay it forward through my own experiences living abroad in Taiwan for 8 years.
             <br><br>
 <a href="http://www.taouci.com" id="download-button" class="btn-large waves-effect waves-light blue">VISIT TAO @ TAOUCI.COM</a></td>
           </tr>
