--- a/projectPages/onwiththeshow.html
+++ b/projectPages/onwiththeshow.html
@@ -36,20 +36,20 @@
       <div class="row">
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center"> <img class="responsive-img " src="../images/onwiththeshow.png"></h2>
+            <h2 class="center"> <img class="responsive-img materialboxed" src="../images/OnWithTheShow1.jpg"></h2>
             <h5 class="center">A display of magic.</h5>
           </div>
         </div>
         <div class="col s12 m4">
           <div class="icon-block hide-on-small-only">
-             <h2 class="center"> <img class="responsive-img " src="../images/projectblood.png"></h2>
-            <h5 class="center">Minigames included.</h5>
+             <h2 class="center"> <img class="responsive-img materialboxed" src="../images/OnWithTheShow3.jpg"></h2>
+            <h5 class="center">Evil bosses? Included.</h5>
 
           </div>
         </div>
         <div class="col s12 m4">
           <div class="icon-block hide-on-small-only">
-             <h2 class="center"> <img class="responsive-img " src="../images/projectblood.png"></h2>
+             <h2 class="center"> <img class="responsive-img materialboxed" src="../images/OnWithTheShow2.jpg"></h2>
             <h5 class="center">Try not to perish.</h5>
           </div>
         </div>
@@ -70,9 +70,10 @@
     <h4>Play/Download "On with the Show!</h4>
     <p>
  <br>
-    Grab the build here: <br>
+    <a href="https://onedrive.live.com/?cid=d42c52f680876dbd&id=D42C52F680876DBD%2117324&ithint=file,.zip&authkey=!AB2Xgns8CDrWSy0">Grab the build here:</a> <br>
 
-    Grab dependencies (required to run the game!) here: <br>
+    Grab the dependencies (required to run the game!) here. <br>
+    <a href="http://www.microsoft.com/en-us/download/details.aspx?id=27598">Microsoft XNA Framework Redistributable 4.0</a> <br>
 
     </p>
 
@@ -187,6 +188,7 @@
      $(document).ready(function(){
     // the "href" attribute of .modal-trigger must specify the modal ID that wants to be triggered
     $('.modal-trigger').leanModal();
+     $('.materialboxed').materialbox();
   });
   </script>
 
