--- a/projectPages/blood.html
+++ b/projectPages/blood.html
@@ -7,6 +7,7 @@
   <!-- CSS  -->
   <link href="../css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="../css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+    <link rel="icon" type="image/png" href="../favicon.ico"/>
 </head>
 
 <body class="grey lighten-2" >
