Cleaned up repository, updated the Readme file.

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ I challenge myself to learn more every day.
             <div class="card-content white-text">
           <div class="icon-block">            
           <a href="projects.html"><img class="responsive-img" src="images/onwiththeshow.png"></a>
-             <span class="card-title">///GAMEPROJECTS</span>
+             <span class="card-title">///GAMEPROJ</span>
             <p class="light">Check out the various game projects I work on.</p>
           </div>
         </div>
@@ -67,7 +67,7 @@ I challenge myself to learn more every day.
             <div class="card-content white-text">
           <div class="icon-block">
 <a href="projectsOther.html"> <img class="responsive-img " src="images/jason2.jpg"></a>
-              <span class="card-title">///OTHERPROJECTS</span>
+              <span class="card-title">///OTHER</span>
             <p class="light">Hackathons, volunteering, sideprojects. </p>
           </div>
           </div>
@@ -80,7 +80,7 @@ I challenge myself to learn more every day.
             <div class="card-content white-text">
             <div class="icon-block">
               <a href="clubsOrgs.html"> <img class="responsive-img " src="images/jason1.jpg"></a>
-                <span class="card-title">///MYCLUBORGS</span>
+                <span class="card-title">///CLUBORGS</span>
             <p class="light">Clubs at UCI that I lead and contribute to.</p>
           </div>
           </div></div>
