--- a/projectPages/blood.html
+++ b/projectPages/blood.html
@@ -25,6 +25,16 @@
     </div>
   </nav>
 
+   <ul id="slide-out" class="side-nav fixed">
+    <li><a href="#home">Back to Top</a></li>
+    <li><a href="#about">About/Download</a></li>
+    <li><a href="#play">Playthrough</a></li>
+    <li><a href="#contribution">My contribution</a></li>
+    <li><a href="#control">Controls</a></li>
+    <li><a href="#credit">Team credits</a></li>
+  </ul>
+  <a href="#" data-activates="slide-out" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
+
   <div class="section no-pad-bot" id="index-banner">
     <div class="container">
       <br><br>
@@ -95,6 +105,14 @@
         Blood was developed in Unity3D with C#.
       </div>
       </blockquote>
+
+<div id="play" class="row">
+  <h5>Video Runthrough: (In progress!)</h5>
+      <div class="video-container">
+        <iframe width="853" height="480" src="" frameborder="0" allowfullscreen></iframe>
+      </div>
+      </div>
+
   <div class="row">
 
         <h5>My Role and future development:</h5>
