Added pictures for blood, fixed sites.

--- a/projectPages/blood.html
+++ b/projectPages/blood.html
@@ -52,7 +52,7 @@
                   <div class="row">
                     <div class="col s12 m4">
                       <div class="icon-block">
-                        <h2 class="center"> <img class="responsive-img materialboxed " src="../images/projectblood.png"></h2>
+                        <h2 class="center"> <img class="responsive-img materialboxed " src="../images/bloodPic1.gif"></h2>
                         <h5 class="center">Flashy effects.</h5>
                       </div>
                     </div>
@@ -64,7 +64,7 @@
                     </div>
                   <div class="col s12 m4">
                     <div class="icon-block hide-on-small-only">
-                       <h2 class="center"> <img class="responsive-img materialboxed" src="../images/projectblood.png"></h2>
+                       <h2 class="center"> <img class="responsive-img materialboxed" src="../images/bloodPic2.gif"></h2>
                       <h5 class="center">Spin to win.</h5>
                     </div>
                   </div>
@@ -78,8 +78,8 @@
                     <!-- Modal Structure -->
                <div id="modal1" class="modal">
                     <h4>Play/Download Project Blood</h4>
-                    <p> <br> <a href="projectExecutable/BloodFallBuild2014.zip">Grab latest build here!</a> <br>
-                    <a href="https://github.com/foreza/ProjectBlood_VGDC2014">View the ongoing project on Github.</a></p><br>
+                    <p> <br> <a href="projectExecutable/BloodFallBuild2014.zip">Grab latest release here! (December '14)</a> <br>
+                    <a href="https://github.com/foreza/ProjectBlood_VGDC2014">View/Download the ongoing project on Github.</a></p><br>
                   <a href="#modal1" class="waves-effect btn-flat red modal-close">Back</a>
               </div>
 
