--- a/projectPages/foodrun.html
+++ b/projectPages/foodrun.html
@@ -14,7 +14,7 @@
 
 
 
-<nav class="grey darken-4" role="navigation" ng-controller="FooterController as nava">    
+<nav id="home" class="grey darken-4" role="navigation" ng-controller="FooterController as nava">    
   <div class="container">
       <div class="nav-wrapper"><a id="logo-container" ng-href="../{{nava.nav.nav1Link}}" class="brand-logo">{{nava.nav.nav1Name}}</a>
         <ul id="nav-mobile" class="right side-nav">
@@ -27,6 +27,9 @@
     </div>
   </nav>
 
+ <div class="row">
+    <div class="col s1">
+
   
   <ul id="slide-out" class="side-nav fixed">
     <li><a href="#home">Back to Top</a></li>
@@ -37,9 +40,10 @@
     <li><a href="#credit">Team credits</a></li>
   </ul>
   <a href="#" data-activates="slide-out" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
-
+</div>
+    <div class="col s11">
   <div class="section no-pad-bot" id="index-banner">
-    <div id="home" class="container">
+    <div class="container">
       <br><br>
       <h1 class="header center orange-text">FoodRun</h1>
         <div class="row center">
@@ -176,7 +180,7 @@ Development is currently in hiatus as most of the members have decided to work o
 
     </div>
   </div>
-
+</div>
 
 <footer ng-controller="FooterController as footer" class="grey darken-4">
     <div class="container">
