--- a/projectPages/onwiththeshow.html
+++ b/projectPages/onwiththeshow.html
@@ -25,6 +25,10 @@
     </div>
   </nav>
 
+   <div class="row">
+    <div class="col s1">
+
+
     <ul id="slide-out" class="side-nav fixed">
     <li><a href="#home">Back to Top</a></li>
     <li><a href="#about">About/Download</a></li>
@@ -34,7 +38,8 @@
     <li><a href="#credit">Team credits</a></li>
   </ul>
   <a href="#" data-activates="slide-out" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
-
+</div>
+<div class="col s11">
   <div class="section no-pad-bot" id="index-banner">
     <div id="home" class="container">
       <br><br>
@@ -162,7 +167,7 @@
 
     </div>
   </div>
-
+  </div>
 
 <footer ng-controller="FooterController as footer" class="grey darken-4">
     <div class="container">
@@ -195,6 +200,7 @@
       </div>
     </div>
   </footer>
+  
 
   <!--  Scripts-->
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.10/angular.min.js"></script>
