--- a/funApp/tasks.html
+++ b/funApp/tasks.html
@@ -47,9 +47,13 @@
       <h3> 2/15/14 </h3>
       <ul class="flow-text">
       <li> Worked out today! (Day 1)
-      <li> Finished 131 group work.
+      <li> Finished 131 group work; updated group mates.
+      <li> Sent out VGDC email updates to my Mentee. Coaching underway!
+      <li> Arranged schedule for Project Blood meet-up times.
+      <li> Checked officer apps. Worried about future of VGDC.
+      <li> [decision] Dropping down to staff for TAO next year, may/may not take president role for VGDC.
       <li> Made this uh. Handy app.
-      <li> Fixed my main website bugs, added more.
+      <li> Fixed my main website bugs, added more images.
       <li> More incoming! I also plan to add a pomodoro timer + client side adding functionality.
       </ul>
 
