Updated resume, working on updating rest of site. Hooray for spring break.

--- a/clubsOrgs.html
+++ b/clubsOrgs.html
@@ -42,13 +42,15 @@
           <tr>
           <td><h5>Video Game Development Club @ UCI</h5><img class="responsive-img" src="images/vgdc.jpg"></td>
           <td></td>
-          <td> I'm currently the Vice President of VGDC @ UCI. <br>
+          <td> I'm the Vice President of VGDC @ UCI. <br>
           I'm in charge of logistics/event planning, faculty communication and industry outreach. <br>
-          I'm also in charge of sending out weekly emails. <br>
+          I constantly search for and arrange job and internship opportunities for club members. <br>
+          I'm also in charge of sending out weekly email updates! <br>
+
 
           I've been a member of this club since my freshman year, and I have deeply involved with this club since. 
           <br>
-          I partipate in game jams, attend workshops and speaker events, and became an officer of the club my second year.
+          I partipated in game jams, attended workshops and speaker events, and became an officer of the club by my second year.
 
 
 
@@ -63,7 +65,7 @@
             <td><h5>Taiwanese American Org. @ UCI</h5><img class="responsive-img" src="images/taouci.png"></td>
             <td></td>
             <td>I'm currently the Webmaster of TAO @ UCI. <br>
-          I'm in charge of maintaining the club website and event/logistics planning.<br>
+          I'm in charge of maintaining the club website and event/logistics planning. In addition, I also create content for events when necessary, such as for our annual <a href="http://www. taouci.com/lanternFestival.html">Lantern Festival.</a><br>
 
           I've been a member of this club since my sophomore year, serving as a staff member and helping out with events. 
           <br>
