Tentative website updates, planning to do more later today. SSI doesn't work on github. Sad face.

--- a/clubsOrgs.html
+++ b/clubsOrgs.html
@@ -45,7 +45,7 @@
           <td> I'm the Vice President of VGDC @ UCI. <br>
           I'm in charge of logistics/event planning, faculty communication and industry outreach. <br>
           I constantly search for and arrange job and internship opportunities for club members. <br>
-          I'm also in charge of sending out weekly email updates! <br>
+          I send out weekly email updates. <br>
 
 
           I've been a member of this club since my freshman year, and I have deeply involved with this club since. 
@@ -64,10 +64,10 @@
           <tr>
             <td><h5>Taiwanese American Org. @ UCI</h5><img class="responsive-img" src="images/taouci.png"></td>
             <td></td>
-            <td>I'm currently the Webmaster of TAO @ UCI. <br>
-          I'm in charge of maintaining the club website and event/logistics planning. In addition, I also create content for events when necessary, such as for our annual <a href="http://www. taouci.com/lanternFestival.html">Lantern Festival.</a><br>
+            <td>I'm the Webmaster of TAO @ UCI. <br>
+          I'm in charge of maintaining the club website (I use a bash script and FTP with angular.js to keep updates fast) and event/logistics planning. I manage our domain and keep our web server clean and tidy. I also create content for events such as our annual <a href="http://www. taouci.com/lanternFestival.html">Lantern Festival.</a><br>
 
-          I've been a member of this club since my sophomore year, serving as a staff member and helping out with events. 
+          IMajority of my web development skills were learned during my stay.
           <br>
            I've met many different individuals from my culture through this club! <br>
              I've aim to pay it forward through my own experiences living abroad in Taiwan for 8 years.
