--- a/index.html
+++ b/index.html
@@ -29,19 +29,18 @@
 
   <div class="section no-pad-bot" id="index-banner">
     <div class="container">
-      <h1 class="header center grey-text">Produce. Develop. Game.</h1>
         <div class="row center">
          <img class="responsive-img circle" onclick="aToastToYou()" src="images/jaydom.jpg">
         </div>
       <div class="row center">
         <h3 class="header col s12 light">
-         I'm Jason Chiu.
+         I'm Jason.
         </h3> <p class="heavy">
         I'm a student at the University of California, Irvine.
          <br>
          I'm passionate about games and web development.
          <br>
-I challenge myself to learn more every day. 
+        I challenge myself to learn more every day. 
         </p>
       </div>
       </div>
@@ -55,8 +54,8 @@ I challenge myself to learn more every day.
             <div class="card-content white-text">
           <div class="icon-block">            
           <a href="projects.html"><img class="responsive-img" src="images/onwiththeshow.png"></a>
-             <span class="card-title">///GAMEPROJ</span>
-            <p class="light">Check out the various game projects I work on.</p>
+             <span class="card-title">PROJECTS</span>
+            <p class="light">Various games and projects I work on.</p>
           </div>
         </div>
         </div>
@@ -67,7 +66,7 @@ I challenge myself to learn more every day.
             <div class="card-content white-text">
           <div class="icon-block">
 <a href="projectsOther.html"> <img class="responsive-img " src="images/jason2.jpg"></a>
-              <span class="card-title">///OTHER</span>
+              <span class="card-title">OTHER</span>
             <p class="light">Hackathons, volunteering, sideprojects. </p>
           </div>
           </div>
@@ -80,8 +79,8 @@ I challenge myself to learn more every day.
             <div class="card-content white-text">
             <div class="icon-block">
               <a href="clubsOrgs.html"> <img class="responsive-img " src="images/jason1.jpg"></a>
-                <span class="card-title">///CLUBORGS</span>
-            <p class="light">Clubs at UCI that I lead and contribute to.</p>
+                <span class="card-title">CLUBS</span>
+            <p class="light">Clubs that I contribute to.</p>
           </div>
           </div></div>
         </div>
