--- a/projectPages/blood.html
+++ b/projectPages/blood.html
@@ -90,6 +90,7 @@
           Each level has several minions, and a boss monster that will grant Valter an ability once defeated. <br>
           Proper usage of light and shadows will allow players to defeat enemies with ease.</p>
           Blood was developed in Unity3D with C#. 
+          <b>We plan to ship this game to Steam!</b>
           </blockquote>
       </div>
      
@@ -118,20 +119,20 @@
          </p>
       </div>
             <div id="credit" class="row">
-                <h5>Credits:</h5>
+                <h5>Team:</h5>
                  <ul class="light">
-                <li>Jason Chu - Producer </li>
-                <li>Khang Tran - Project Lead, Designer </li>
-                <li>Daniel Lara - Designer </li>
+                <li>Jason Chu - Producer, Acting Lead </li>
                 <li>Rex Rockwell - Lead Programmer </li>
                 <li>Kristina Wong - Audio Engineer </li>
                 <li>Theodore Won - Artist </li>
+                <li>Alyssa Sheffler - Lead Designer</li>
+                <li>Derek Edrich - Programmer</li>
+                <li>Jeremy Rice - Programmer</li>
+                <li>Khang Tran - Project Lead, Designer </li>
+                <li>Daniel Lara - Designer </li>
                 <li>Valerie Vikhliantsev - Artist </li>
                 <li>Lawrence Chen - Programmer</li>
                 <li>Walter Coggeshall - Programmer</li>
-                <li>Alyssa Sheffler - Programmer</li>
-                <li>Derek Edrich - Programmer</li>
-                <li>Jeremy Rice - Programmer</li>
                 </ul>
             </div>
       </div>
