--- a/projectsOther.html
+++ b/projectsOther.html
@@ -45,6 +45,21 @@
 
         <tbody>
 
+          <tr>
+            <td><h5>The Portal - 2015</h5><img class="responsive-img" src="images/hackLogo.jpg"></td>
+            <td></td>
+            <td>I'm currently working at the Portal, a non-profit venture, as a campus ambassador. <br>
+            I negotiate with partner companies, organize and market events, and maintain the website. <br>
+            I most recently helped with the career fair, which hosted 10 companies and 300 students.
+
+            <br>
+
+<br>
+            <a href="http://theportal.io/"/ id="download-button" class="btn-large waves-effect waves-light blue">Visit the Portal.</a>
+
+
+          </tr>
+
             <tr>
             <td><h5>HackUCI - 2014</h5><img class="responsive-img" src="images/hackLogo.jpg"></td>
             <td></td>
@@ -65,7 +80,7 @@
           <tr>
           <td><h5>ReadyForce - 2014</h5><img class="responsive-img" src="images/readyforce.jpg"></td>
           <td></td>
-          <td>I worked for ReadyForce (acquired by InternMatch) Fall 2014 as their campus ambassador. <br>
+          <td>I worked for ReadyForce (acquired by InternMatch/LookSharp) Fall 2014 as their campus ambassador. <br>
           I introduced the professional networking platform to UCI students through Facebook and email. <br>
           I wrote and executed marketing plans, and worked in a team of 3 during UCI's career fair. <br>
 
