--- a/index.html
+++ b/index.html
@@ -47,15 +47,13 @@
     </div>
 
 
-  <div class="container">
-      <div class="row center">
+      <div class="container row center">        
         <div class="col s12 m4">
          <div class="card blue-grey darken-1">
             <div class="card-content white-text">
           <div class="icon-block">            
           <a href="projects.html"><img class="responsive-img" src="images/onwiththeshow.png"></a>
-             <span class="card-title">PROJECTS</span>
-            <p class="light">Various games and projects I work on.</p>
+             <span class="card-title">Game Projects</span>
           </div>
         </div>
         </div>
@@ -66,8 +64,7 @@
             <div class="card-content white-text">
           <div class="icon-block">
 <a href="projectsOther.html"> <img class="responsive-img " src="images/jason2.jpg"></a>
-              <span class="card-title">OTHER</span>
-            <p class="light">Hackathons, volunteering, sideprojects. </p>
+              <span class="card-title">Work</span>
           </div>
           </div>
           </div>
@@ -79,15 +76,13 @@
             <div class="card-content white-text">
             <div class="icon-block">
               <a href="clubsOrgs.html"> <img class="responsive-img " src="images/jason1.jpg"></a>
-                <span class="card-title">CLUBS</span>
-            <p class="light">Clubs that I contribute to.</p>
+                <span class="card-title">Clubs</span>
           </div>
           </div></div>
         </div>
 
       </div>
-    </div>
-    <br><br>
+    <br>
   </div>
 
   <footer ng-controller="FooterController as footer" class="grey darken-4">
