--- a/index.html
+++ b/index.html
@@ -29,67 +29,59 @@
 
   <div class="section no-pad-bot" id="index-banner">
     <div class="container">
-        <div class="row center">
-         <img class="responsive-img circle" onclick="aToastToYou()" src="images/jaydom.jpg">
-        </div>
       <div class="row center">
-        <h3 class="header col s12 light">
-         I'm Jason.
-        </h3> <p class="heavy">
-        I'm a student at the University of California, Irvine.
-         <br>
-         I'm passionate about games and web development.
-         <br>
-        I challenge myself to learn more every day. 
+        <img class="responsive-img circle" onclick="aToastToYou()" src="images/jaydom.jpg">
+      </div>
+      <div class="row center">
+        <h3 class="header col s12 light">I'm Jason.</h3> 
+        <p class="heavy">I'm a student at the University of California, Irvine.<br>I'm passionate about games and web development.<br>I challenge myself to learn more every day. 
         </p>
       </div>
-      </div>
     </div>
-
-
-      <div class="container row center">        
-        <div class="col s12 m4">
-         <div class="card blue-grey darken-1">
-            <div class="card-content white-text">
-          <div class="icon-block">            
-          <a href="projects.html"><img class="responsive-img" src="images/onwiththeshow.png"></a>
-             <span class="card-title">Game Projects</span>
-          </div>
-        </div>
-        </div>
-        </div>
-
-        <div class="col s12 m4">
-          <div class="card blue-grey darken-1">
-            <div class="card-content white-text">
-          <div class="icon-block">
-<a href="projectsOther.html"> <img class="responsive-img " src="images/jason2.jpg"></a>
-              <span class="card-title">Work</span>
-          </div>
-          </div>
-          </div>
-        </div>
-
-        <div class="col s12 m4">
-          
-          <div class="card blue-grey darken-1">
-            <div class="card-content white-text">
-            <div class="icon-block">
-              <a href="clubsOrgs.html"> <img class="responsive-img " src="images/jason1.jpg"></a>
-                <span class="card-title">Clubs</span>
-          </div>
-          </div></div>
-        </div>
-
-      </div>
-    <br>
   </div>
+
+
+  <div class="row center">        
+
+        <div class="col s12 m4">
+          <div class="card blue-grey darken-1">
+            <div class="card-content white-text">
+              <div class="icon-block">            
+                <a href="projects.html"><img class="responsive-img" src="images/onwiththeshow.png"></a>
+                  <span class="card-title">GAME PROJECTS</span>
+             </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col s12 m4">
+          <div class="card blue-grey darken-1">
+            <div class="card-content white-text">
+              <div class="icon-block">
+              <a href="projectsOther.html"> <img class="responsive-img " src="images/jason2.jpg"></a>
+                <span class="card-title">WORK</span>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col s12 m4">
+          <div class="card blue-grey darken-1">
+            <div class="card-content white-text">
+              <div class="icon-block">
+                <a href="clubsOrgs.html"> <img class="responsive-img " src="images/jason1.jpg"></a>
+                  <span class="card-title">CLUBS</span>
+              </div>
+            </div>
+          </div>
+        </div>
+    </div>
 
   <footer ng-controller="FooterController as footer" class="grey darken-4">
     <div class="container">
       <div class="row">
         <div class="col l10 s12">
-          <h5 class="white-text">About Jason: </h5>
+          <h5 class="white-text">About: </h5>
           <p class="grey-text text-darken-2">
           {{footer.data.footerText1}} <br>  
           {{footer.data.footerText2}} <br>
@@ -98,7 +90,7 @@
           </p>
         </div>
         <div class="col l2 s12">
-          <h5 class="white-text">Find me on..</h5>
+          <h5 class="white-text">Find me:</h5>
           <p class="grey-text text-darken-2">
            <ul>
            <li><a ng-href="{{footer.data.link1}}"> {{footer.data.name1}} </a></li>
