Updated index and project pages.

--- a/projectPages/blood.html
+++ b/projectPages/blood.html
@@ -77,9 +77,9 @@
      </div>
                     <!-- Modal Structure -->
                <div id="modal1" class="modal">
-                    <h4>Play/Download Project Blood</h4>
-                    <p> <br> <a href="projectExecutable/BloodFallBuild2014.zip">Grab latest release here! (December '14)</a> <br>
-                    <a href="https://github.com/foreza/ProjectBlood_VGDC2014">View/Download the ongoing project on Github.</a></p><br>
+                    <h4>Play/Download Project Blood!!</h4>
+                    <p> <br> <a href="projectExecutable/WinterBuild2015.zip">Grab latest release here! (Spring '15)</a> <br>
+                    <a href="https://github.com/foreza/ProjectBlood_VGDC2014">View/Track the ongoing project on Github.</a></p><br>
                   <a href="#modal1" class="waves-effect btn-flat red modal-close">Back</a>
               </div>
 
@@ -154,7 +154,7 @@
           </p>
         </div>
         <div class="col l2 s12">
-          <h5 class="white-text">Find me on..</h5>
+          <h5 class="white-text">Find me:</h5>
           <p class="grey-text text-darken-2">
            <ul>
            <li><a ng-href="{{footer.data.link1}}"> {{footer.data.name1}} </a></li>
