--- a/projects.html
+++ b/projects.html
@@ -41,31 +41,57 @@
         </thead>
 
         <tbody>
+          
           <tr>
-          <td><h5>Project Blood - 2014</h5><img class="responsive-img" src="images/projectblood.png"></td>
-          <td></td>
-          <td>A stealth rogue-like crawler featuring a vampire as he takes on contracts to kill.
-          <br>Developed/written in Unity/C#, with use of Tiled2D. <br><br>
-<a href="projectPages/blood" id="download-button" class="btn-large waves-effect waves-light grey">View Project Blood Page</a>
+            <td>
+              <h5>Project Blood</h5>
+              <img class="responsive-img" src="images/projectblood.png">
+            </td>
+            <td>A stealth rogue-like crawler featuring a vampire as he takes on contracts to kill.<br>Developed/written in Unity/C#, with use of Tiled2D. <b>Still under development!</b><br><br>
+            <a href="projectPages/blood" id="download-button" class="btn-large waves-effect waves-light grey">View Project Blood Page</a>
+            </td>
+          </tr>
 
 
-          </td>
-          <td></td>
-           </tr>
           <tr>
-            <td><h5>FoodRun - 2014</h5><img class="responsive-img" src="images/foodRun.jpg"></td>
+            <td><h5>FoodRun</h5><img class="responsive-img" src="images/foodRun.jpg"></td>
             <td></td>
             <td>A food-fighting game where tomatoes are thrown, and where playing with food takes on a whole new meaning. <br>Developed/written in Python, using the Pygame library.
             <br><br>
 <a href="projectPages/foodrun" id="download-button" class="btn-large waves-effect waves-light grey">View FoodRun Page</a></td>
           </tr>
           <tr>
-            <td><h5>"On with the Show!" - 2014</h5><img class="responsive-img" src="images/onwiththeshow.png"></td>
+            <td><h5>"On with the Show!"</h5><img class="responsive-img" src="images/onwiththeshow.png"></td>
             <td></td>
             <td>A puzzle platformer where the magician takes on an ardous task of bringing back color to the world.<br>Developed in C# XNA.
             <br><br>
 <a href="projectPages/onwiththeshow" id="download-button" class="btn-large waves-effect waves-light grey">View "On with the Show!""
           </tr>
+
+<!-- Under construction 
+
+          <tr>
+            <td>
+              <h5>Project: Werewolf</h5>
+              <img class="responsive-img" src="images/projectblood.png">
+            </td>
+            <td>A stealth rogue-like crawler featuring a vampire as he takes on contracts to kill.<br>Developed/written in Unity/C#, with use of Tiled2D. Still under development!<br><br>
+            <a href="projectPages/blood" id="download-button" class="btn-large waves-effect waves-light grey">View Project Blood Page</a>
+            </td>
+          </tr>
+
+          <tr>
+            <td>
+              <h5>Project: Flower</h5>
+              <img class="responsive-img" src="images/projectblood.png">
+            </td>
+            <td>A stealth rogue-like crawler featuring a vampire as he takes on contracts to kill.<br>Developed/written in Unity/C#, with use of Tiled2D. Still under development!<br><br>
+            <a href="projectPages/blood" id="download-button" class="btn-large waves-effect waves-light grey">View Project Blood Page</a>
+            </td>
+          </tr>
+
+-->
+
         </tbody>
       </table>
             
