fixed a bug on the project pages

--- a/projects.html
+++ b/projects.html
@@ -46,7 +46,7 @@
             <td>
               <h5>Project Blood</h5>
               <img class="responsive-img" src="images/projectblood.png">
-            </td>
+            </td><td></td> <!-- Adds an additional column -->
             <td>A stealth rogue-like crawler featuring a vampire as he takes on contracts to kill.<br>Developed/written in Unity/C#, with use of Tiled2D. <b>Still under development!</b><br><br>
             <a href="projectPages/blood" id="download-button" class="btn-large waves-effect waves-light grey">View Project Blood Page</a>
             </td>
