Updated resume, fixing meta data to allow for better SEO, linking with google pages.

--- a/index.html
+++ b/index.html
@@ -1,10 +1,34 @@
 <!DOCTYPE html>
+
 <html lang="en" ng-app="footerGem">
 <head>
 
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
-  <title>Jason Chiu: Projects</title>
+<!-- Title of webpage. Change at your own risk.-->
+<title>Jason Chiu: Developer, Coffee-Seeker.</title>
+
+<!-- Brief description of web page here that shows up. -->
+<meta name="description" content="Jason is a senior at UCI studying game development, loves coffee. Jason makes cool stuff. And understands basic SEO. :)" />
+
+<!-- Allows crawlers to see things. Unnecessary for now, but can toggle options on and off as necessary in the future. -->
+<!-- https://support.google.com/webmasters/answer/79812?hl=en -->
+<meta name="robots" content="all" />
+<meta name="googlebot" content="all" />
+
+<!-- This website is in english. Don't you dare translate it! -->
+<meta name="google" content="notranslate" />
+
+<!-- No search box to be found here, ladies and gents and non-coffee partakers.. -->
+<meta name="google" content="nositelinkssearchbox" />
+
+<!-- Verification with google pages. -->
+<meta name="google-site-verification" content="Uy0gF0wJqZ4NCjNaeqyHdAbq6R_FOmqZNgeavOVsAVA" />
+
+<!-- Specify the content type and character set of this page. -->
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+  
+<!-- For mobile optimization, still in the works. Please stand by... -->
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
+
   <!-- CSS  -->
   <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
